# AdvanceProgramming

./: CMakeLists.txt  Github Tutorial.docx
EX1/: CMakeLists.txt  IBattleshipGameAlgo.h  Main.cpp  Player.cpp  data_types.h  fileParsing.cpp  utilities.cpp
Project1/: Project1.sln
battleships/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ex2.shukrun.file.vcxproj  ex2.shukrun.file.vcxproj.filters  ex2.shukrun.naive.vcxproj  ex2.shukrun.naive.vcxproj.filters  ex2.shukrun.smart.vcxproj  ex2.shukrun.smart.vcxproj.filters  ex2.shukrun.vcxproj  ex2.shukrun.vcxproj.filters
output_dan/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ex2.shukrun.file.vcxproj  ex2.shukrun.file.vcxproj.filters  ex2.shukrun.naive.vcxproj  ex2.shukrun.naive.vcxproj.filters  ex2.shukrun.smart.vcxproj  ex2.shukrun.smart.vcxproj.filters  ex2.shukrun.vcxproj  ex2.shukrun.vcxproj.filters
output_files/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ex2.shukrun.file.vcxproj  ex2.shukrun.file.vcxproj.filters  ex2.shukrun.naive.vcxproj  ex2.shukrun.naive.vcxproj.filters  ex2.shukrun.smart.vcxproj  ex2.shukrun.smart.vcxproj.filters  ex2.shukrun.vcxproj  ex2.shukrun.vcxproj.filters
src_files/: Board.cpp  CMakeLists.txt  FileReaderAlgo.cpp  Game.h  IBattleshipGameAlgo.h  Main.cpp  Player.h
(+172 files in other folders)
